// =============================================
// HIRING PLATFORM - QUIZ SERVICE
// Handles: Tests, Questions, Challenges, Submissions
// Database: MySQL 8.0+
// =============================================

Project quiz_service {
  database_type: 'MySQL'
  Note: 'Quiz service handling tests (QCM & code), questions, and submissions'
}

// ===================
// ENUMS
// ===================

Enum test_type {
  qcm
  code
}

// ===================
// TEST DEFINITIONS
// ===================

Table tests {
  id char(36) [pk]
  title varchar(255) [not null]
  test_type test_type [not null]
  description text
  duration_minutes int [not null]
  passing_score int [note: 'Minimum percentage to pass']
  created_by char(36) [not null, note: 'References main_service.users']
  created_at timestamp
  updated_at timestamp
}

// ===================
// QCM QUESTIONS
// ===================

Table qcm_questions {
  id char(36) [pk]
  test_id char(36) [not null]
  question text [not null]
  options json [not null, note: '[{id, text, is_correct}]']
  points int [default: 1]
  order_index int [not null]
}

// ===================
// CODE CHALLENGES
// ===================

Table code_challenges {
  id char(36) [pk]
  test_id char(36) [not null]
  title varchar(255) [not null]
  description text [not null]
  initial_code text [note: 'Starter code template']
  language varchar(50) [not null]
  test_cases json [note: '[{input, expected_output, is_hidden}]']
  points int [default: 1]
  order_index int [not null]
}

// ===================
// TEST SUBMISSIONS
// ===================

Table test_submissions {
  id char(36) [pk]
  application_phase_id char(36) [not null, note: 'References main_service.application_phases']
  candidate_id char(36) [not null, note: 'References main_service.users']
  test_id char(36) [not null]
  started_at timestamp
  submitted_at timestamp
  score int
  passed boolean
  time_spent_seconds int
}

// ===================
// QCM ANSWERS
// ===================

Table qcm_answers {
  id char(36) [pk]
  submission_id char(36) [not null]
  question_id char(36) [not null]
  selected_option_id varchar(50)
  is_correct boolean
  answered_at timestamp
}

// ===================
// CODE SUBMISSIONS (File-based)
// ===================

Table code_submissions {
  id char(36) [pk]
  submission_id char(36) [not null]
  challenge_id char(36) [not null]
  file_url text [not null, note: 'URL to uploaded code file']
  file_name varchar(255) [not null]
  file_size int [note: 'Size in bytes']
  language varchar(50)
  test_results json [note: 'Results of test case execution']
  score int
  submitted_at timestamp
}

// ===================
// RELATIONSHIPS
// ===================

Ref: qcm_questions.test_id > tests.id
Ref: code_challenges.test_id > tests.id
Ref: test_submissions.test_id > tests.id
Ref: qcm_answers.submission_id > test_submissions.id
Ref: qcm_answers.question_id > qcm_questions.id
Ref: code_submissions.submission_id > test_submissions.id
Ref: code_submissions.challenge_id > code_challenges.id

// ===================
// TABLE GROUPS
// ===================

TableGroup test_definitions {
  tests
  qcm_questions
  code_challenges
}

TableGroup submissions {
  test_submissions
  qcm_answers
  code_submissions
}
